--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,52 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="container">
+<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+<div class="blog-header py-3">
+  <div class="row flex-nowrap justify-content-between align-items-center">
+  <div class="col-4 pt-1"><h2>Socials</h2></div>
+  <div class="col-4 text-center"><h1>Cole Mooney Album Review</h1></div>
+  <div class="col-4 d-flex justify-content-end align-items-center"><h2>Menu</h2></div>
+  </div>
+</div>
+<div class="jumbotron p-4 p-md-5 text-limegreen rounded bg-dark">
+  <div class="col-md-6 px-0">
+    <h1 class="display-4 font-italic">Album Reviews Each Week</h1>
+    <p class="lead my-3">Request an album on my social media!</p>
+  </div>
+</div>
+<div class="row mb-2">
+  <div class="col-md-6">
+     <div class="row bg-dark no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+      <div class="col p-4 d-flex flex-column position-static">
+        <strong class="d-inline-block mb-2 text-white">Review</strong>
+        <h3 class="mb-0">Please Excuse Me For Being Antisocial</h3>
+        <div class="mb-1 text-white">Roddy Ricch</div>
+        <p class=" card-text mb-auto">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="row bg-dark no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+      <div class="col p-4 d-flex flex-column position-static">
+        <strong class="d-inline-block mb-2 text-white">Review</strong>
+        <h3 class="mb-0">Anyways</h3>
+        <div class="mb-1 text-white">Young Nudy</div>
+        <p class="card-text mb-auto">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
+      </div>
+    </div>
+  </div>
+</div>
+<main role="main" class="container">
+  <div class="row">
+    <div class="col-md-8 blog-main">
+      <h3 class="pb-4 mb-4 font-talic border-bottom">Off The Dome</h3>
+        <h2 class="blog-post-title">Anyways</h2>
+        <p class="blog-post-meta">February 25, 2020 by Cole</p>
+        <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
+        <hr>
+        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+    </div>
+    <aside class="col-md-4 blog-sidebar"></aside>
+  </div>
+</main>
+
+</div>
