--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,9 +1,10 @@
 body {
-  padding: 50px;
+
   font: 32px "Lucida Grande", Helvetica, Arial, sans-serif;
   // background-image: url('/images/money.jpg');
   background-size: cover;
   color: lime;
+  // background-image: url("./public/images/wojakbrain.jpg");
 }
 h1, h2, h3{
   font-family: "Playfair Display", Georgia, "Times New Roman", serif;
@@ -14,4 +15,38 @@ a {
 }
 .whole{
   margin: 5% 0% 0% 10%;
+}
+.blog-footer{
+  padding: 3.5rem 0;
+  color: #999;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: .05rem solid #e5e5e5;
+}
+.blog-footer p:last-child {
+  margin-bottom: 1.5;
+  padding-bottom: 20px;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+// #jumbo{
+//   background-image: url("./public/images/wojakbrain.jpg");
+// }
+
+.wojak{
+  position: relative;
+  width: 75%;
+}
+
+.wojak-text{
+  position: absolute;
+  top: 30%;
+  left: 47%;
+  transform: translate(-50%, -50%);
+  -webkit-text-stroke-width: 1.5px;
+    -webkit-text-stroke-color: black;
 }
