--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,8 +7,9 @@
   <div class="col-4 d-flex justify-content-end align-items-center"><h2>Menu</h2></div>
   </div>
 </div>
-<div class="jumbotron p-4 p-md-5 text-limegreen rounded bg-dark">
-  <div class="col-md-6 px-0">
+<div id="jumbo" class="jumbotron p-4 p-md-5 text-limegreen rounded bg-dark">
+  <img src="./images/wojakbrain.jpg" alt="wojak" class="wojak">
+  <div class="col-md-6 px-0 wojak-text">
     <h1 class="display-4 font-italic">Album Reviews Each Week</h1>
     <p class="lead my-3">Request an album on my social media!</p>
   </div>
@@ -29,6 +30,7 @@
       <div class="col p-4 d-flex flex-column position-static">
         <strong class="d-inline-block mb-2 text-white">Review</strong>
         <h3 class="mb-0">Anyways</h3>
+        <br>
         <div class="mb-1 text-white">Young Nudy</div>
         <p class="card-text mb-auto">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</p>
       </div>
@@ -45,8 +47,27 @@
         <hr>
         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
     </div>
-    <aside class="col-md-4 blog-sidebar"></aside>
+    <aside class="col-md-4 blog-sidebar">
+      
+      <div class="p-4 mb-3 bg-light rounded">
+        <h4 class="font-italic">About</h4>
+        <p class="mb-0">Welcome to Cole Mooney Album Reviews. I am a hip hob and hardcore music fan and biasedly so. I will review albums that interest me and will post my thoughts here. Enjoy!</p>
+      </div>
+      <div class="p-4">
+        <h4 class="font-italic">Elsewhere</h4>
+        <ol class="list-unstyled">
+          <li><a href="#">GitHub</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Facebook</a></li>
+        </ol>
+      </div>
+    </aside>
   </div>
 </main>
-
 </div>
+<footer class="blog-footer">
+  <p>Blog built with <a href="https://getbootstrap.com/">Bootstrap</a> by Cole.</p>
+  <p>
+    <a href="#">Back to top</a>
+  </p>
+</footer>
