--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,5 +1,35 @@
-body {
+*{
+  margin: 0;
+  padding: 0;
+}
 
+html, body{
+  height: 100%;
+}
+
+#container{
+  min-height: 100%;
+}
+
+#main{
+  overflow: auto;
+  padding-bottom: 200px;
+}
+
+#foot{
+  position: relative;
+  height: 200px;
+  margin-top: -200px;
+  clear: both;
+
+  padding: 3.5rem 0;
+  color: #999;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-top: .05rem solid #e5e5e5;
+}
+body {
   font: 32px "Lucida Grande", Helvetica, Arial, sans-serif;
   // background-image: url('/images/money.jpg');
   background-size: cover;
@@ -11,19 +41,12 @@ h1, h2, h3{
 }
 
 a {
-  color: #00B7FF;
+  color: lime;
 }
 .whole{
   margin: 5% 0% 0% 10%;
 }
-.blog-footer{
-  padding: 3.5rem 0;
-  color: #999;
-  font-size: 1.5rem;
-  text-align: center;
-  background-color: #f9f9f9;
-  border-top: .05rem solid #e5e5e5;
-}
+
 .blog-footer p:last-child {
   margin-bottom: 1.5;
   padding-bottom: 20px;
