--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,11 @@
-<div class="container">
+<div id="container" class="container">
 <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+<div id="main">
 <div class="blog-header py-3">
   <div class="row flex-nowrap justify-content-between align-items-center">
   <div class="col-4 pt-1"><h2>Socials</h2></div>
   <div class="col-4 text-center"><h1>Cole Mooney Album Review</h1></div>
-  <div class="col-4 d-flex justify-content-end align-items-center"><h2>Menu</h2></div>
+  <div class="col-4 d-flex justify-content-end align-items-center"><a href="/"><h2>Menu</h2></a></div>
   </div>
 </div>
 <div id="jumbo" class="jumbotron p-4 p-md-5 text-limegreen rounded bg-dark">
@@ -44,7 +45,7 @@
         <h2 class="blog-post-title">Anyways</h2>
         <p class="blog-post-meta">February 25, 2020 by Cole</p>
         <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap. Basic typography, images, and code are all supported.</p>
-        <hr>
+        
         <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
     </div>
     <aside class="col-md-4 blog-sidebar">
@@ -65,7 +66,8 @@
   </div>
 </main>
 </div>
-<footer class="blog-footer">
+</div>
+<footer id="foot" >
   <p>Blog built with <a href="https://getbootstrap.com/">Bootstrap</a> by Cole.</p>
   <p>
     <a href="#">Back to top</a>
