--- a/views/post.hbs
+++ b/views/post.hbs
@@ -1,16 +1,21 @@
-<div class="container">
+<div id="container" class="container">
   <div class="blog-header py-3">
   <div class="row flex-nowrap justify-content-between align-items-center">
   <div class="col-4 pt-1"><h2>Socials</h2></div>
   <div class="col-4 text-center"><h1>Cole Mooney Album Review</h1></div>
-  <div class="col-4 d-flex justify-content-end align-items-center"><h2>Menu</h2></div>
+  <div class="col-4 d-flex justify-content-end align-items-center"><a href="/"><h2>Menu</h2></a></div>
+  </div>
+  <div id="main">
+ 
+    
+
   </div>
 </div>
 
 
 </div>
 
-<footer class="blog-footer">
+<footer id="foot">
   <p>Blog built with <a href="https://getbootstrap.com/">Bootstrap</a> by Cole.</p>
   <p>
     <a href="#">Back to top</a>
